--- a/style.css
+++ b/style.css
@@ -2,237 +2,381 @@
 
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: "Lexend", sans-serif;
+  font-family: "Lexend", sans-serif;
 }
 
 
 .container {
-    max-width: 1440px;
-    margin: 0 auto;
-    padding: 0 20px;
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 0 20px;
 }
 
 
 .header {
-    padding: 20px;
-    background-color: rgb(219, 219, 219);
+  padding: 20px;
+  background-color: rgb(219, 219, 219);
 }
 
 .header .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
-    display: flex;
-    align-items: center;
-    gap: 10px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 .logo img {
-    width: 30px;
-    height: 30px;
+  width: 30px;
+  height: 30px;
 }
 
 .logo span {
-    font-size: 18px;
-    font-weight: 700;
+  font-size: 18px;
+  font-weight: 700;
 
 }
 
 .nav ul {
-    list-style: none;
-    display: flex;
-    gap: 20px;
+  list-style: none;
+  display: flex;
+  gap: 20px;
 }
 
 .nav a {
-    text-decoration: none;
-    color: rgb(61, 51, 51);
-    font-weight: 500;
+  text-decoration: none;
+  color: rgb(61, 51, 51);
+  font-weight: 500;
 
 }
 
 
 .nav-icons a img {
-    width: 20px;
-    height: 20px;
-    margin-left: 15px;
+  width: 20px;
+  height: 20px;
+  margin-left: 15px;
 }
 
 
 .hero .container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 40px;
 }
 
 .hero-content {
-    max-width: 500px;
+  max-width: 500px;
 }
 
 .hero-content h1 {
-    font-size: 60px;
-    color: rgb(99, 73, 48);
-    font-weight: 700;
+  font-size: 60px;
+  color: rgb(99, 73, 48);
+  font-weight: 700;
 
 }
 
 .hero-content p {
-    font-size: 20px;
-    margin-bottom: 30px;
-    color: rgb(165, 151, 135);
+  font-size: 20px;
+  margin-bottom: 30px;
+  color: rgb(165, 151, 135);
 }
 
 
 .btn {
-    text-decoration: none;
-    border-radius: 9px;
-    background-color: rgb(80, 50, 23);
-    color: #ffffffdc;
-    font-weight: 400;
-    padding: 20px 25px;
+  text-decoration: none;
+  border-radius: 9px;
+  background-color: rgb(80, 50, 23);
+  color: #ffffffdc;
+  font-weight: 400;
+  padding: 20px 25px;
 
 }
 
 
 
 .category-section {
-    padding: 80px 0;
-    text-align: center;
+  padding: 80px 0;
+  text-align: center;
 }
 
 .category-section h2 {
-    font-size: 34px;
-    font-weight: 600;
-    margin-bottom: 40px;
-    color: rgb(88, 81, 73);
+  font-size: 34px;
+  font-weight: 600;
+  margin-bottom: 40px;
+  color: rgb(88, 81, 73);
 }
 
 .category-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-    gap: 20px;
-    justify-content: center;
-    padding: 40px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  gap: 20px;
+  justify-content: center;
+  padding: 40px;
 }
 
 .category-card .item-count {
-    padding: 5px;
-    text-align: center;
-    color: rgb(122, 115, 107);
+  padding: 5px;
+  text-align: center;
+  color: rgb(122, 115, 107);
 
 }
 
 
 
 .category-icon {
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 24px;
-    margin: 0 auto 15px;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+  margin: 0 auto 15px;
 }
 
 .category-name {
-    padding: 10px
+  padding: 10px
 }
 
 
-
-
-
-
-
-
-
-
-
-
-.promotions-section {
-    padding-bottom: 50px;
-}
 
 .promotions-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px;
+  padding: 20px;
 }
 
 .promo-card {
-    background-color: rgb(242,242,242);
-    border-radius: 10px;
-    padding: 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    position: relative;
-  
+  background-color: rgb(242, 242, 242);
+  border-radius: 10px;
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  position: relative;
+
 }
 
 .promo-tag {
-    position: absolute;
-    top: 25px;
-    background-color: rgb(236, 142, 102);
-    font-size: 0.75rem;
-    font-weight: 600;
-    padding: 4px 10px;
-    border-radius: 20px;
+  position: absolute;
+  top: 25px;
+  background-color: rgb(236, 142, 102);
+  font-size: 0.75rem;
+  font-weight: 600;
+  padding: 4px 10px;
+  border-radius: 20px;
 }
 
 .promo-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding-top: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-top: 40px;
 }
 
 .promo-content h3 {
-    font-size: 1.2rem;
-    font-weight: 600;
-    color: black;
-    margin-top: 20px;
-    margin-bottom: 5px;
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: black;
+  margin-top: 20px;
+  margin-bottom: 5px;
 }
 
 .promo-content a {
-    font-size: 18px;
-    color: rgb(61, 61, 61);
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    gap: 5px;
+  font-size: 18px;
+  color: rgb(61, 61, 61);
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  gap: 5px;
 }
 
 
 .promo-image {
-    width: 120px;
-    text-align: right;
+  width: 120px;
+  text-align: right;
 }
 
 .promo-image img {
-    max-width: 100%;
-    height: auto;
+  max-width: 100%;
+  height: auto;
+}
+
+
+h2 {
+  text-align: center;
+  margin-bottom: 30px;
+  font-size: 26px;
+  font-weight: bold;
+  padding: 30px;
+}
+
+.product-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px;
+  padding: 20px;
+}
+
+.product-card {
+  background: #fff;
+  border-radius: 12px;
+  padding: 20px;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  transition: 0.3s ease-in-out;
+}
+
+
+.product-card img {
+  width: 90px;
+  height: 90px;
+  object-fit: contain;
+  margin-bottom: 15px;
+}
+
+.product-title {
+  font-size: 15px;
+  font-weight: bold;
+  margin-bottom: 8px;
+  color: rgb(114, 113, 113)
+}
+
+.price {
+  font-size: 14px;
+  font-weight: bold;
+  margin-bottom: 6px;
+  color: #585858;
+}
+
+.old-price {
+  color: #a8a8a8;
+  margin-left: 6px;
+  font-weight: normal;
 }
 
 
 
 
+.newsletter-container {
+  max-width: 1350px;
+  margin: 50px auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  background: #cfcbcb;
+  padding: 10px;
+  border-radius: 4px;
+}
+
+.newsletter-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+.newsletter-box {
+  background: #fff;
+  border-radius: 12px;
+  padding: 40px 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+}
+
+.newsletter-box small {
+  font-size: 14px;
+  color: #6d5f45;
+  text-align: center;
+}
+
+.newsletter-box h2 {
+  font-size: 22px;
+  font-weight: bold;
+  margin: 10px 0 20px;
+  color: #3c2c0d;
+}
+
+.newsletter-form {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+
+}
+
+.newsletter-form input {
+  flex: 1;
+  padding: 10px 12px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  font-size: 14px;
+}
+
+.newsletter-form button {
+  padding: 10px 18px;
+  border: none;
+  border-radius: 8px;
+  background: #3c2c0d;
+  color: #fff;
+  font-weight: bold;
+
+}
 
 
 
+.footer-container {
+  max-width: 1440px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  gap: 30px;
+}
+
+.footer-column h4 {
+  font-size: 16px;
+  margin-bottom: 15px;
+  font-weight: bold;
+}
+
+.footer-column ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.footer-column ul li {
+  margin-bottom: 10px;
+}
+
+.footer-column ul li a {
+  text-decoration: none;
+  color: #3c2c0d;
+  font-size: 14px;
+
+}
 
 
+.footer-column2 {
+  padding: 10px;
 
+}
 
+.footer-logo-cnt{
+  display: flex;
+  align-items: center;
+}
